--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     </header>
 
     <!-- Main Content -->
-    <main class="container mx-auto py-8">
+    <main class="container mx-auto py-8 px-4">
         <h2 class="text-2xl font-bold mb-4">Welcome to My Blog!</h2>
         <p class="mb-8">Explore our latest blogs and share your thoughts with the community!</p>
 
         <!-- Blog List -->
-        <div id="blog-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div id="blog-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- Example Blog -->
             <div class="bg-white shadow-md rounded p-4">
                 <h3 class="font-bold text-lg">Sample Blog Title</h3>
